--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.1.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5"
